force-app/main/default/objects/Country_Movie__c/Country_Movie__c.object-meta.xml
<CustomObject>
    <label>Country Movie</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Country Movie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Movies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>