force-app/main/default/objects/Country_Movie__c/fields/Premiere_date__c.field-meta.xml
<CustomField>
    <fullName>Premiere_date__c</fullName>
    <description>premiere date of movie in the current country</description>
    <label>Premiere date</label>
    <type>Date</type>
</CustomField>