force-app/main/default/objects/Country_Movie__c/fields/Shown_till__c.field-meta.xml
<CustomField>
    <fullName>Shown_till__c</fullName>
    <description>the last date where movie is shown in the cinema in the current country</description>
    <label>Shown till</label>
    <type>Date</type>
</CustomField>