force-app/main/default/objects/Country_Movie__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Movie__c</columns>
    <columns>Premiere_date__c</columns>
    <columns>Shown_till__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>